--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Hotbyte
 
-spring.datasource.url=jdbc:mysql://localhost:3306/task
+spring.datasource.url=jdbc:mysql://localhost:3306/hotbyte
 spring.datasource.username=root
 spring.datasource.password=admin
 
